examples/errors/too-large-macro-argument.spcasm
incbin "../binary.bin",19292192019209192910291929292,2